--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
                             <div class="dropdown-menu dropdown-menu-right user-dd animated p-b-0">
                                 <div class="logged-in-out">
                                     <a class="dropdown-item input-group">
+                                        <i class="ti-server m-r-5 m-l-5 ld-input-icon"></i>
+                                        <input type="text" class="form-control" id="ld-login-api" placeholder="http://localhost:8080" aria-label="Username" aria-describedby="basic-addon1" required="">
+                                    </a>								
+                                    <a class="dropdown-item input-group">
                                         <i class="ti-user m-r-5 m-l-5 ld-input-icon"></i>
                                         <input type="text" class="form-control" id="ld-login-user" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required="">
                                     </a>
